fix: codemirror jump failed

--- a/src/renderer/editor/index.css
+++ b/src/renderer/editor/index.css
@@ -1,5 +1,6 @@
 .ProseMirror {
     width: 100%;
+    white-space: pre-wrap;
 }
 
 .ProseMirror:focus {
